--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  height: 100%;
+  width: 100%;
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .App-logo {
@@ -35,4 +41,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.todos__list { 
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
 }
