--- a/facebook-messenger-clone/src/App.css
+++ b/facebook-messenger-clone/src/App.css
@@ -2,37 +2,63 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo { 
+  margin-top: 30px;
+  height: 80px;
+  width: 80px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.app__title {
+  font-size: 35px;
+  font-weight: 350;
+  color: black;
+}
+
+.app__welcome {
+  margin-top: -30px;
+  margin-bottom: 30px;
+
+  font-size: 13px;
+  font-weight: 500;
+  color: #9e9e9e;
+}
+
+.app__form { 
+  border-radius: 25px;
+  box-shadow: 0px 10px 12px -4px #d8d8d8;
+
+  padding: 20px;
+  position: fixed;
+  bottom: 0px;
+
+  z-index: 1;
+  background-color: #e9e9eb;
+
+  width: 90%;
+
+  margin: 20px;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.app__formControl { 
+  display: flex !important;
+  flex-direction: row !important;
+}
+
+@media (max-width: 1200px) {
+  .app__form { 
+    /* width: 90%; */
+    width: 80%;
+  
   }
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app__input {
+  flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__iconButton {
+  flex: 0;
 }
