--- a/facebook-messenger-clone/src/Message.css
+++ b/facebook-messenger-clone/src/Message.css
@@ -1,6 +1,7 @@
 .message {
     padding: 10px;
-    margin: 10px;
+    margin-left: 60px;
+    margin-right: 60px;
     width: fit-content;
 }
 
@@ -12,6 +13,7 @@
 
 .message__userCard {
     background-color: #0b81ff !important;
+    color: white !important;
 }
 
 .message__guestCard { 
