--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -4,10 +4,12 @@
 
 .app {
   background-color: #fafafa;
+  height: 100%;
 }
 
 .app__headerImage {
   width: 100px;
+  object-fit: contain;
 }
 
 .app__header {
@@ -17,9 +19,42 @@
   border-bottom: 1px solid lightgray;
   /* so it doesnt look stretched */
   object-fit: contain;
+
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .app__signup {
   display: flex;
   flex-direction: column;
+}
+
+.app_posts {
+  padding: 20px;
+
+  display: flex;
+  justify-content: center;
+}
+
+.app__postsRight {
+  margin-left: 20px;
+}
+
+.app__imageUploadError {
+  text-align: center;
+  font-weight: 300;
+
+  padding-bottom: 20px;
+}
+
+@media (max-width: 700px) {
+  .app_posts {
+    flex-direction: column;
+  }
 }
