--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -13,18 +13,70 @@
     border-bottom: 1px solid lightgray;
 }
 
-.post__text {
-    font-weight: normal;
-    padding: 20px;
-}
-
 .post__header {
     display: flex;
     /* vertical align */
     align-items: center;  
     padding: 20px;
+
+    color: #4d4d4d;
+    font-weight: 500;
+}
+
+.post__text {
+    font-weight: normal;
+
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    font-size: 12px;
+    color: #434343;
 }
 
 .post__avatar {
     margin-right: 10px;
+}
+
+h3 {
+    font-size: 17px;
+}
+
+.post__commentBox {
+    display: flex;
+}
+
+.post__comments {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+
+    padding: 20px;
+    color: #434343;
+}
+
+.post__input {
+    flex: 1;
+    border: none;
+    padding: 10px;
+    border-top: 1px solid lightgray;
+
+    outline: none;
+    color: #464646;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #adadad;
+}
+  
+
+.post__button {
+    cursor: pointer;
+    flex: 0;
+    border: none;
+    color: #b2d8f1;
+    font-weight: bold;
+    font-size: 13px;
+    background-color: transparent;
+    border-top: 1px solid lightgray;
 }
