--- a/amazon-clone/src/Checkout.css
+++ b/amazon-clone/src/Checkout.css
@@ -1,9 +1,26 @@
 .checkout {
   background-color: white;
+  padding: 20px;
+  height: max-content;
+  display: flex;
 }
 
 .checkout__title {
   margin-right: 10px;
   padding: 10px;
   border-bottom: 1px solid lightgray;
+}
+
+.checkout__left {
+  width: 80%;
+}
+
+@media (max-width: 720px) {
+  .checkout {
+    flex-direction: column;
+  }
+
+  .checkout__left {
+    width: 100%;
+  }
 }
